Button组件颜色命名修改

--- a/css/elements/button.styl
+++ b/css/elements/button.styl
@@ -67,22 +67,22 @@ Btn(c, t)
     box-shadow: 0 1px 3px rgba(0, 0, 0, .4);
 
 .btn
-  Btn: #fff #222;
+  Btn: #fff color['normal'];
 
   &.btn-primary
-    BtnColor: #198ac8 #fff;
+    BtnColor: color['primary'] #fff;
 
   &.btn-secondary
-    BtnColor: #4eb3e9 #fff;
+    BtnColor: color['btn-secondary'] #fff;
 
   &.btn-success
-    BtnColor: #19c856 #fff;
+    BtnColor: color['success'] #fff;
 
   &.btn-error
-    BtnColor: #E63752 #fff;
+    BtnColor: color['error'] #fff;
 
   &.btn-warning
-    BtnColor: #E8CB2C #fff;
+    BtnColor: color['warning'] #fff;
 
   &.btn-ghost
     color: #fff;
