--- a/css/variables.styl
+++ b/css/variables.styl
@@ -17,6 +17,12 @@ color = {
   normal: #222,
   link: #333,
 
+  primary: #198ac8;
+  secondary : #4eb3e9,
+  success : #19c856,
+  error : #E63752,
+  warning : #E8CB2C,
+
   border-normal: #ddd,
   border-focus: #888,
   gray: #888,
