--- a/css/variables.styl
+++ b/css/variables.styl
@@ -15,7 +15,9 @@ font-family = {
 
 color = {
   normal: #222,
+  dark-grey: #888,
   link: #333,
+  link-grey: #ddd,
 
   primary: #198ac8;
   secondary : #4eb3e9,
@@ -23,8 +25,10 @@ color = {
   error : #E63752,
   warning : #E8CB2C,
 
+  background-code: #f7f7f7,
   border-normal: #ddd,
   border-focus: #888,
+
   gray: #888,
   grey: #ddd,
   light-gray: #dbdbdb,
