--- a/css/elements/button.styl
+++ b/css/elements/button.styl
@@ -73,7 +73,7 @@ Btn(c, t)
     BtnColor: color['primary'] #fff;
 
   &.btn-secondary
-    BtnColor: color['btn-secondary'] #fff;
+    BtnColor: color['secondary'] #fff;
 
   &.btn-success
     BtnColor: color['success'] #fff;
