--- a/css/elements/code.styl
+++ b/css/elements/code.styl
@@ -30,6 +30,7 @@ pre
   padding-left: 1.3rem;
   color: color['dark-grey'];
   border-left: 2px solid color['border-normal'];
+  transition: .2s ease border;
 
   &:hover
     border-left-color: color['border-focus'];
