--- a/css/variables.styl
+++ b/css/variables.styl
@@ -19,7 +19,7 @@ color = {
   link: #333,
   link-grey: #ddd,
 
-  primary: #198ac8;
+  primary: #198ac8,
   secondary : #4eb3e9,
   success : #19c856,
   error : #E63752,
@@ -33,7 +33,6 @@ color = {
   grey: #ddd,
   light-gray: #dbdbdb,
   light-grey: #f7f7f7,
-  dark-grey: #e8e8e8
 }
 
 // Media queries
