--- a/css/variables.styl
+++ b/css/variables.styl
@@ -22,17 +22,22 @@ color = {
   primary: #198ac8,
   secondary : #4eb3e9,
   success : #19c856,
-  error : #E63752,
-  warning : #E8CB2C,
+  error : #e63752,
+  warning : #e8cB2c,
 
   background-code: #f7f7f7,
+  background-table: #f7f7f7,
+  background-table-hover: #e8e8e8,
+  background-table-mark: #ffff85,
+  border-light: #dbdbdb,
   border-normal: #ddd,
   border-focus: #888,
+  border-mark: #eaea90,
 
   gray: #888,
   grey: #ddd,
   light-gray: #dbdbdb,
-  light-grey: #f7f7f7,
+  light-grey: #f7f7f7
 }
 
 // Media queries
