--- a/css/lutachu.styl
+++ b/css/lutachu.styl
@@ -29,7 +29,7 @@
 
 // Components
 // ==============================================
-@import "components/acomment";
+@import "components/acommet";
 @import "components/card";
 @import "components/poem";
 @import "components/msg";
