--- a/css/components/acommet.styl
+++ b/css/components/acommet.styl
@@ -1,18 +1,18 @@
 // ===============================================
-// Components / Acomment.styl                   ||
+// Components / Acommet.styl                    ||
 //                                              ||
 // =============================================||
 // Copyright 2015 @ Rakume<i@fake.moe>          ||
 // MIT License                                  ||
 // ===============================================
 
-.m-comments
+.acommets
   position: relative;
 
   @media mq-tablet
     width: 80%;
 
-.m-acomment
+.commet
   right: -15px;
   width: 120px;
   font-size: .9em;
@@ -30,7 +30,7 @@
     position: absolute;
     border-top: 1px solid color['gray'];
 
-  &.z-left
+  &.commet-left
     left: -15px;
     right: auto;
     text-align: right;
@@ -45,7 +45,7 @@
     width: 20%;
     margin-right: -@width;
     
-    &.z-left
+    &.commet-left
       left: auto;
       right: -15px;
       margin-left: 0;
@@ -53,7 +53,7 @@
       margin-right: -20%;
       margin-top: 10px;
     
-    &.z-left:before
+    &.commet-left:before
       left: 0;
       right: auto;
   
@@ -61,7 +61,7 @@
     position: static;
     margin-right: 0;
 
-    &.z-left
+    &.commet-left
       margin: 0;
 
     &:before
