--- a/css/components/acommet.styl
+++ b/css/components/acommet.styl
@@ -28,7 +28,7 @@
     width: 40%;
     content: '';
     position: absolute;
-    border-top: 1px solid color['gray'];
+    border-top: 1px solid color['dark-grey'];
 
   &.commet-left
     left: -15px;
