--- a/css/lutachu.styl
+++ b/css/lutachu.styl
@@ -12,7 +12,6 @@
 // Base
 // ==============================================
 @import "base/normalize";  // Normalize Style
-@import "base/print";        // @media Print
 @import "base/foundation";   // Foundation
 
 // Layout
@@ -35,4 +34,5 @@
 @import "components/msg";
 @import "components/nav";
 
-@import "utillyties";
+@import "utillyties"; // Utillyties
+@import "base/print"; // @media Print
