--- a/css/base/normalize.styl
+++ b/css/base/normalize.styl
@@ -14,9 +14,9 @@
  */
 
 html
-  font-family sans-serif /* 1: */;
-  -ms-text-size-adjust 100% /* 2: */;
-  -webkit-text-size-adjust 100% /* 2: */;
+  font-family: sans-serif /* 1: */;
+  -ms-text-size-adjust: 100% /* 2: */;
+  -webkit-text-size-adjust: 100% /* 2: */;
 
 /**
  * Remove default margin.
@@ -28,6 +28,8 @@ body
   line-height: 1.82;
   color: color['normal'];
   font-family: font-family['normal'];
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 
 /** HTML5 display definitions
    ==========================================================================: */;
@@ -63,8 +65,8 @@ audio,
 canvas,
 progress,
 video
-  display inline-block /* 1: */;
-  vertical-align baseline /* 2: */;
+  display: inline-block /* 1: */;
+  vertical-align: baseline /* 2: */;
 
 /**
  * Prevent modern browsers from displaying `audio` without controls.
