--- a/css/base/print.styl
+++ b/css/base/print.styl
@@ -6,7 +6,7 @@
 @media print 
   *,
   *:before,
-  *:after 
+  *:after
     background: transparent !important;
     color: #000 !important;
     box-shadow: none !important;
@@ -32,7 +32,6 @@
 
   pre,
   blockquote 
-    border: 1px solid #999;
     page-break-inside: avoid;
 
   /*
@@ -58,3 +57,19 @@
   h2,
   h3 
     page-break-after: avoid;
+  
+  .commet
+    position: static;
+    margin-right: 0;
+
+    &.commet-left
+      margin: 0;
+
+    &:before
+      border: 0;
+      content: '( ';
+      position: static;
+      padding-left: 5px;
+
+    &:after
+      content: ' )';
