--- a/css/components/poem.styl
+++ b/css/components/poem.styl
@@ -6,8 +6,10 @@
 // MIT License                                  ||
 // ===============================================
 
-// Horizontal
-.m-poem-hc
+// Horizontal Poem
+// ==============================================
+
+.poem-hc
   text-align: center;
   margin: 2em 0;
 
@@ -17,7 +19,7 @@
     &:before
       content: none;
 
-  .m-poem-author
+  .poem-author
     display: block;
     text-align: right;
     font-weight: 800;
@@ -25,10 +27,11 @@
     &:before
       content: '——';
 
-// Vertical
+// Vertical Poem
+// ==============================================
 
-.m-poem-lr,
-.m-poem-rl
+.poem-lr,
+.poem-rl
   display: block;
   white-space: pre-line;
   margin: 2em auto;
@@ -43,7 +46,7 @@
   h4,
   h5,
   h6,
-  .m-poem-title
+  .poem-title
     margin: 0;
     margin-left: -.5em;
     font-weight: bold;
@@ -52,7 +55,7 @@
     &:before
       content: none;
 
-    .m-poem-author
+    .poem-author
       font-size: 60%;
 
   p
@@ -67,6 +70,6 @@
     &:before
       content: none;
 
-.m-poem-lr
+.poem-lr
   writing-mode: vertical-lr;
   -webkit-writing-mode: vertical-lr;
