--- a/css/layout/grid.styl
+++ b/css/layout/grid.styl
@@ -6,7 +6,7 @@
 // MIT License                                  ||
 // ===============================================
 
-.m-grid
+.grid
   center()
   clearfix()
 
@@ -14,12 +14,12 @@
   margin-left -1em
   margin-right -1em
 
-[class=m-grid-u]
+[class=grid-u]
   float left
   padding 0 1em
   display inline
 
-.m-grid-u
+.grid-u
   @media mq-normal
     for n in 1..12
       &.z-n{n}
