--- a/css/layout/typography.styl
+++ b/css/layout/typography.styl
@@ -171,12 +171,19 @@ li
     margin-bottom: 0;
     margin-left: 14px;
 
-  ul
+ul li
+  ul li
     list-style-type: disc;
 
-    ul
+    ul li
       list-style-type: circle;
 
+ol li
+  ol li
+    list-style-type: upper-roman;
+
+    ol li
+      list-style-type: lower-roman;
   p
     margin: .4em 0 .6em;
 
