--- a/css/variables.styl
+++ b/css/variables.styl
@@ -17,7 +17,7 @@ color = {
   normal: #222,
   dark-grey: #888,
   link: #333,
-  link-grey: #ddd,
+  link-grey: #bbb,
 
   primary: #198ac8,
   secondary : #4eb3e9,
@@ -41,6 +41,6 @@ color = {
 }
 
 // Media queries
-mq-mobile = 'screen and (max-width: 479px)'
-mq-tablet = 'screen and (min-width: 480px) and (max-width: 767px)'
-mq-normal = 'screen and (min-width: 768px)'
+mq-mobile = 'screen and (max-width: 768px)'
+mq-tablet = 'screen and (min-width: 768px) and (max-width: 1024px)'
+mq-normal = 'screen and (min-width: 1024px)'
