细节问题修改

--- a/css/components/card.styl
+++ b/css/components/card.styl
@@ -98,6 +98,7 @@
     line-height: 50px;
     margin-bottom: -.8em;
     border-top: 1px solid color['border-normal'];
-    
+    background: color['background-bar'];
+
     .btn
       margin: 1em .5em 1em 0;
