--- a/css/layout/typography.styl
+++ b/css/layout/typography.styl
@@ -80,7 +80,8 @@ h6
 p
   margin-top: 0;
   margin-bottom: 1.46em;
-  letter-spacing: .2px;
+  letter-spacing: .3px;
+  text-shadow: #eee 0 0 10px;
 
   &.text-author
     display: block;
