--- a/css/variables.styl
+++ b/css/variables.styl
@@ -7,7 +7,7 @@
 // ===============================================
 
 font-family = {
-  normal: unquote('"Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans","wenquanyi micro hei","Hiragino Sans GB", "Hiragino Sans GB W3", Arial, sans-serif'),
+  normal: unquote('"Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei Light", "Microsoft YaHei", FreeSans, Arimo, "Droid Sans","wenquanyi micro hei","Hiragino Sans GB", "Hiragino Sans GB W3", Arial, sans-serif'),
   serif: unquote('Georgia, "Times New Roman", Times, SimSun, serif'),
   kai: unquote('Georgia, "Times New Roman", Times, Kai, "Kaiti SC", KaiTi, BiauKai, serif'),
   monospace: unquote('"Source Code Pro", Monaco, Menlo, Consolas, "Courier New", monospace')
@@ -25,19 +25,16 @@ color = {
   error : #e63752,
   warning : #e8cB2c,
 
+  background-bar: #f7f7f7,
   background-code: #f7f7f7,
   background-table: #f7f7f7,
   background-table-hover: #e8e8e8,
   background-table-mark: #ffff85,
+
   border-light: #dbdbdb,
   border-normal: #ddd,
   border-focus: #888,
-  border-mark: #eaea90,
-
-  gray: #888,
-  grey: #ddd,
-  light-gray: #dbdbdb,
-  light-grey: #f7f7f7
+  border-mark: #eaea90
 }
 
 // Media queries
