Fix the blank of the card

--- a/src/components/card.styl
+++ b/src/components/card.styl
@@ -85,6 +85,9 @@
     padding: .8em 1.5em;
     color: color['normal'];
     line-height: 1.825;
+    
+  img + .card-header
+    margin-top: 0; 
 
   * + .card-content
     padding-top: 0;
