Rename some classes

--- a/src/elements/form.styl
+++ b/src/elements/form.styl
@@ -62,7 +62,7 @@ option
 label
   margin-bottom: .2rem;
 
-.z-radius
+.form-radius
   input,
   select,
   textarea,
@@ -95,15 +95,15 @@ label
         margin-bottom: 0;
         border-bottom-color: color['border-focus'];
 
-  &.z-radius
+  &.form-radius
     &:first-child
       border-top-radius: 5px;
 
     &:last-child
       border-bottom-radius: 5px;
 
-.z-radius.form-group,
-.z-radius .form-group
+.form-radius.form-group,
+.form-radius .form-group
   input
     &:first-child
       border-top-radius: 5px;
