Change the background-color of ghost button when hover and active

--- a/src/elements/button.styl
+++ b/src/elements/button.styl
@@ -95,13 +95,13 @@ Btn(c, t)
     &:hover
       color: #fff;
       border: 1px solid;
-      background-color rgba(255, 255, 255, .3)
+      background-color rgba(0, 0, 0, .3)
 
     &.active,
     &:active
       color: #fff;
       border: 1px solid;
-      background-color rgba(255, 255, 255, .6)
+      background-color: rgba(0, 0, 0, .6)
 
     &:visited
       color: #fff;
