--- a/src/variables.styl
+++ b/src/variables.styl
@@ -7,7 +7,7 @@
 // ===============================================
 
 font-family = {
-  normal: unquote('"Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei Light", "Microsoft YaHei", FreeSans, Arimo, "Droid Sans","wenquanyi micro hei","Hiragino Sans GB", "Hiragino Sans GB W3", Arial, sans-serif'),
+  normal: unquote('"Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans","wenquanyi micro hei","Hiragino Sans GB", "Hiragino Sans GB W3", Arial, sans-serif'),
   serif: unquote('Georgia, "Times New Roman", Times, SimSun, serif'),
   kai: unquote('Georgia, "Times New Roman", Times, Kai, "Kaiti SC", KaiTi, BiauKai, serif'),
   monospace: unquote('"Source Code Pro", Monaco, Menlo, Consolas, "Courier New", monospace')
@@ -20,10 +20,10 @@ color = {
   link-grey: #bbb,
 
   primary: #198ac8,
-  secondary : #4eb3e9,
-  success : #19c856,
-  error : #e63752,
-  warning : #e8cB2c,
+  secondary: #4eb3e9,
+  success: #19c856,
+  error: #e63752,
+  warning: #e8cB2c,
 
   background-bar: #f7f7f7,
   background-code: #f7f7f7,
