--- a/src/elements/button.styl
+++ b/src/elements/button.styl
@@ -90,30 +90,31 @@ Btn(c, t)
     border: 1px solid;
     background-color: transparent;
     text-shadow: 1px 1px 0 rgba(0, 0, 0, .6);
+    box-shadow: inset 0px 0px 2px rgba(0, 0, 0, .6);
 
     &.hover,
     &:hover
       color: #fff;
       border: 1px solid;
-      background-color rgba(0, 0, 0, .3)
+      background-color: rgba(0, 0, 0, .3);
 
     &.active,
     &:active
       color: #fff;
       border: 1px solid;
-      background-color: rgba(0, 0, 0, .6)
+      background-color: rgba(0, 0, 0, .6);
 
     &:visited
       color: #fff;
 
   &.btn-xl
-    font-size 150%
+    font-size: 150%;
 
   &.btn-lg
-    font-size 125%
+    font-size: 125%;
 
   &.btn-sm
-    font-size 75%
+    font-size: 75%;
 
   &.btn-xs
-    font-size 50%
+    font-size: 50%;
