--- a/src/layout/typography.styl
+++ b/src/layout/typography.styl
@@ -19,20 +19,28 @@ h6
 
 h1
   margin-top: 0;
+  margin-bottom: .2em;
+  font-size: 2.6em;
 
 h2
-  font-size: 1.5em;
-  margin: .83em 0;
+  margin: .23em 0;
+  font-size: 2.15em;
 
 h3
-  font-size: 1.17em;
-  margin: 1em 0;
+  margin: .5em 0;
+  font-size: 1.7em;
 
-h4,
-h5,
-h6
+h4
+  margin: .6em 0;
+  font-size: 1.25em;
+
+h5
+  margin: 1em 0;
   font-size: 1em;
-  margin: 1.6em 0 1em 0;
+
+h6
+  margin: 1.25em 0;
+  font-size: .85em;
 
 .text-counter
   counter-reset: titleh2 titleh3 titleh4 titleh5 titleh6;
@@ -79,9 +87,8 @@ h6
 
 p
   margin-top: 0;
-  margin-bottom: 1.46em;
+  margin-bottom: 1em;
   letter-spacing: .3px;
-
 
   &.text-author
     display: block;
