Optimize the display of figure

--- a/src/utillyties.styl
+++ b/src/utillyties.styl
@@ -7,7 +7,7 @@
 // ===============================================
 
 // Position
- 
+
 .absolute
   position: absolute;
 
@@ -19,10 +19,10 @@
 
 // Float
 
-.left
+.pull-left
   float: left !important;
 
-.right
+.pull-right
   float: right !important;
 
 .clearfix
@@ -66,14 +66,14 @@
 
   center()
   clearfix()
-  
+
   @media mq-tablet
     max-width: 92%;
-  
+
   @media mq-mobile
     max-width: 100%;
     padding-left: 1em;
     padding-right: 1em;
-  
+
 .z-radius
   border-radius: 5px;
