--- a/src/layout/typography.styl
+++ b/src/layout/typography.styl
@@ -238,6 +238,22 @@ kbd
   background-color: #333;
   font-family: font-family['monospace'];
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .25);
-  
+
   kbd
     padding: 0;
+
+// Figure
+
+figure
+  text-align: center;
+
+  &.pull-left,
+  &.pull-right
+    width: 50%;
+
+  figcaption:after
+    content: '';
+    width: 25%;
+    display: block;
+    margin: 1em auto .2em;
+    border-bottom: 1px solid color['border-normal'];
