Fix the color of a in em

--- a/src/layout/typography.styl
+++ b/src/layout/typography.styl
@@ -121,9 +121,15 @@ strong
   color: color['normal'];
   font-weight: 700;
 
+  a
+    color: color['normal'];
+
 em,
 cite
   font-style: normal;
+
+  a
+    font-style: normal;
 
 em
   font-style: inherit;
