Change the color of figcaption

--- a/src/layout/typography.styl
+++ b/src/layout/typography.styl
@@ -262,4 +262,5 @@ figure
     width: 15%;
     display: block;
     margin: 1em auto .2em;
+    color: color['dark-grey'];
     border-bottom: 1px solid color['border-normal'];
