Change pull-* to *

--- a/src/layout/typography.styl
+++ b/src/layout/typography.styl
@@ -253,8 +253,8 @@ kbd
 figure
   text-align: center;
 
-  &.pull-left,
-  &.pull-right
+  &.left,
+  &.right
     width: 50%;
 
   figcaption:after
