--- a/src/layout/typography.styl
+++ b/src/layout/typography.styl
@@ -264,3 +264,10 @@ figure
     margin: 1em auto .2em;
     color: color['dark-grey'];
     border-bottom: 1px solid color['border-normal'];
+
+@media mq-mobile
+  figure
+    &.left,
+    &.right
+      width: 100%;
+      float: none!important;
