--- a/src/components/nav.styl
+++ b/src/components/nav.styl
@@ -33,8 +33,11 @@ nav
     li
       float: left
       margin: 0
-      padding: 0 20px
       list-style: none
+      
+      a
+        display: block
+        padding: 0 1.5em
 
       &:hover
         background-color: rgba(0, 0, 0, .2)
