--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -11,10 +11,10 @@
 
 @keyframes spin {
   0% {
-    transform: rotate(0deg);
+    @include transform(rotate(0deg));
   }
   100% {
-    transform: rotate(359deg);
+    @include transform(rotate(359deg));
   }
 }
 
