--- a/sass/base/print.scss
+++ b/sass/base/print.scss
@@ -9,7 +9,7 @@
   *:after {
     background: transparent !important;
     color: #000 !important;
-    box-shadow: none !important;
+    @include box-shadow(none !important);
     text-shadow: none !important;
   }
 
