--- a/sass/components/card.scss
+++ b/sass/components/card.scss
@@ -10,10 +10,10 @@
   padding: 0;
   background: #fff;
   margin-bottom: 1em;
-  border-radius: 2px;
+  @include border-radius(2px);
   position: relative;
   padding-bottom: .8em;
-  box-shadow: 0 1px 2px 1px rgba(0, 0, 0, .2);
+  @include box-shadow(0 1px 2px 1px rgba(0, 0, 0, .2));
 
   &.card-rich .card-head {
     padding: 0;
@@ -26,7 +26,7 @@
     .card-rich-img img,
     img.card-rich-img {
       margin: 0;
-      border-top-radius: 3px;
+      @include border-top-radius(3px);
     }
 
     .card-title,
@@ -56,12 +56,12 @@
     img,
     .card-rich-img img,
     img.card-rich-img {
-      border-top-radius: 5px;
+      @include border-top-radius(5px);
     }
   }
 
   * + .card-rich-img {
-    border-top-radius: 0;
+    @include border-top-radius(0);
   }
 
   .card-head {
