--- a/sass/layout/typography.scss
+++ b/sass/layout/typography.scss
@@ -288,10 +288,10 @@ kbd {
   color: #fff;
   font-size: 90%;
   padding: 2px 4px;
-  border-radius: 3px;
+  @include border-radius(3px);
   background-color: #333;
   font-family: $font-family-monospace;
-  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .25);
+  @include box-shadow(inset 0 -1px 0 rgba(0, 0, 0, .25));
 
   kbd {
     padding: 0;
