--- a/sass/components/nav.scss
+++ b/sass/components/nav.scss
@@ -1,10 +1,12 @@
-// ============================================================================
-// Components / Nav.scss                                                     ||
-//                                                                           ||
-// ==========================================================================||
-// Copyright 2015 @ Rakume<i@fake.moe> & Awc Cho<orancho@outlook.com>        ||
-// MIT License                                                               ||
-// ============================================================================
+// ================================================
+// Components / Nav.scss                         ||
+//                                               ||
+// ============================================= ||
+// Copyright 2015 @ Rakume<i@fake.moe>           ||
+//                @ Awc Cho<orancho@outlook.com> ||
+//                @ Hitomi<geminiviol@gmail.com> ||
+// MIT License                                   ||
+// ================================================
 
 nav {
   width: 100%;
