--- a/sass/components/poem.scss
+++ b/sass/components/poem.scss
@@ -1,10 +1,11 @@
-// ===============================================
-// Components / Poem.scss                       ||
-//                                              ||
-// =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||
-// MIT License                                  ||
-// ===============================================
+// ================================================
+// Components / Poem.scss                        ||
+//                                               ||
+// ============================================= ||
+// Copyright 2015 @ Rakume<i@fake.moe>           ||
+//                @ Hitomi<geminiviol@gmail.com> ||
+// MIT License                                   ||
+// ================================================
 
 // Horizontal Poem
 // ==============================================
