--- a/sass/elements/button.scss
+++ b/sass/elements/button.scss
@@ -1,10 +1,11 @@
-// ===============================================
-// Elements / Button.scss                       ||
-//                                              ||
-// =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||
-// MIT License                                  ||
-// ===============================================
+// ================================================
+// Elements / Button.scss                        ||
+//                                               ||
+// ============================================= ||
+// Copyright 2015 @ Rakume<i@fake.moe>           ||
+//                @ Hitomi<geminiviol@gmail.com> ||
+// MIT License                                   ||
+// ================================================
 
 // Let's Change Button's Color
 // ==============================================
