--- a/sass/elements/form.scss
+++ b/sass/elements/form.scss
@@ -1,10 +1,11 @@
-// ===============================================
-// Elements / Form.scss                         ||
-//                                              ||
-// =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||
-// MIT License                                  ||
-// ===============================================
+// ================================================
+// Elements / Form.scss                          ||
+//                                               ||
+// ============================================= ||
+// Copyright 2015 @ Rakume<i@fake.moe>           ||
+//                @ Hitomi<geminiviol@gmail.com> ||
+// MIT License                                   ||
+// ================================================
 
 input[type=text],
 input[type=password],
