--- a/sass/elements/table.scss
+++ b/sass/elements/table.scss
@@ -1,10 +1,11 @@
-// ===============================================
-// Elements / Table.scss                        ||
-//                                              ||
-// =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||
-// MIT License                                  ||
-// ===============================================
+// ================================================
+// Elements / Table.scss                         ||
+//                                               ||
+// ============================================= ||
+// Copyright 2015 @ Rakume<i@fake.moe>           ||
+//                @ Hitomi<geminiviol@gmail.com> ||
+// MIT License                                   ||
+// ================================================
 
 .table {
   width: 100%;
