--- a/sass/layout/typography.scss
+++ b/sass/layout/typography.scss
@@ -1,10 +1,11 @@
-// ===============================================
-// Layout / Typograhpy.scss                     ||
-//                                              ||
-// =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||
-// MIT License                                  ||
-// ===============================================
+// ================================================
+// Layout / Typograhpy.scss                      ||
+//                                               ||
+// ============================================= ||
+// Copyright 2015 @ Rakume<i@fake.moe>           ||
+//                @ Hitomi<geminiviol@gmail.com> ||
+// MIT License                                   ||
+// ================================================
 
 a {
   color: $color-link;
