--- a/sass/lutachu.scss
+++ b/sass/lutachu.scss
@@ -1,10 +1,11 @@
-// ===============================================
-// Lutachu.scss                                 ||
-//                                              ||
-// =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||
-// MIT License                                  ||
-// ===============================================
+// ================================================
+// Lutachu.scss                                  ||
+//                                               ||
+// ============================================= ||
+// Copyright 2015 @ Rakume<i@fake.moe>           ||
+//                @ Hitomi<geminiviol@gmail.com> ||
+// MIT License                                   ||
+// ================================================
 
 @import "variables";
 @import "mixins";
