--- a/sass/utillyties.scss
+++ b/sass/utillyties.scss
@@ -1,10 +1,11 @@
-// ===============================================
-// Utillyties.scss                              ||;
-//                                              ||;
-// =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||;
-// MIT License                                  ||;
-// ===============================================
+// ================================================
+// Utillyties.scss                               ||
+//                                               ||
+// ============================================= ||
+// Copyright 2015 @ Rakume<i@fake.moe>           ||
+//                @ Hitomi<geminiviol@gmail.com> ||
+// MIT License                                   ||
+// ================================================
 
 // Position
 
