--- a/sass/components/acommet.scss
+++ b/sass/components/acommet.scss
@@ -1,10 +1,11 @@
-// ===============================================
-// Components / Acommet.scss                    ||
-//                                              ||
-// =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||
-// MIT License                                  ||
-// ===============================================
+// ================================================
+// Components / Acommet.scss                     ||
+//                                               ||
+// ============================================= ||
+// Copyright 2015 @ Rakume<i@fake.moe>           ||
+//                @ Hitomi<geminiviol@gmail.com> ||
+// MIT License                                   ||
+// ================================================
 
 .acommets {
   position: relative;
