--- a/sass/layout/grid.scss
+++ b/sass/layout/grid.scss
@@ -1,10 +1,11 @@
-// ===============================================
-// Layout / Grid.scss                           ||
-//                                              ||
-// =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||
-// MIT License                                  ||
-// ===============================================
+// ================================================
+// Layout / Grid.scss                            ||
+//                                               ||
+// ============================================= ||
+// Copyright 2015 @ Rakume<i@fake.moe>           ||
+//                @ Hitomi<geminiviol@gmail.com> ||
+// MIT License                                   ||
+// ================================================
 
 .grid {
   @include center();
