--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -1,10 +1,11 @@
-// ===============================================
-// Mixins.scss                                  ||
-//                                              ||
-// =============================================||
-// Copyright 2015 @ Rakume<i@fake.moe>          ||
-// MIT License                                  ||
-// ===============================================
+// ================================================
+// Mixins.scss                                   ||
+//                                               ||
+// ============================================= ||
+// Copyright 2015 @ Rakume<i@fake.moe>           ||
+//                @ Hitomi<geminiviol@gmail.com> ||
+// MIT License                                   ||
+// ================================================
 
 // CSS 3
 // -----------------------------------------------------------------------------
