--- a/sass/components/card.scss
+++ b/sass/components/card.scss
@@ -11,10 +11,10 @@
   padding: 0;
   background: #fff;
   margin-bottom: 1em;
-  @include border-radius(2px);
+  border-radius: 3px;
   position: relative;
   padding-bottom: .8em;
-  @include box-shadow(0 1px 2px 1px rgba(0, 0, 0, .2));
+  box-shadow: 0 1px 2px 1px rgba(0, 0, 0, .2);
 
   &.card-rich .card-head {
     padding: 0;
