--- a/sass/elements/button.scss
+++ b/sass/elements/button.scss
@@ -34,7 +34,7 @@
       border: 0;
       opacity: .6;
       background: $c;
-      @include box-shadow(none);
+      box-shadow: none;
       cursor: not-allowed;
     }
   }
@@ -50,29 +50,29 @@
   outline: 0;
   margin: .225em;
   cursor: pointer;
-  @include border-radius(2px);
+  border-radius: 3px;
   text-align: center;
   line-height: 1.5em;
   padding: .35em 1.2em;
   text-decoration: none;
   display: inline-block;
   vertical-align: middle;
-  @include box-shadow(0 0 1px rgba(0, 0, 0, .4));
-  @include transition(background .4s ease, box-shadow .2s ease);
+  box-shadow: 0 0 1px rgba(0, 0, 0, .4);
+  transition: background .4s ease, box-shadow .2s ease;
   @include BtnColor($c, $t);
 
   [class*=icon-]:before {
     color: t;
-    @include transform(scale(1.2));
+    transform: scale(1.2);
   }
 
   &:hover {
-    @include box-shadow(0 0px 3px rgba(0, 0, 0, .4));
+    box-shadow: 0 0px 3px rgba(0, 0, 0, .4);
   }
 
   &.active,
   &:active {
-    @include box-shadow(0 1px 3px rgba(0, 0, 0, .4));
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .4);
   }
 }
 
@@ -101,11 +101,11 @@
 
   &.btn-ghost {
     color: #fff;
-    @include box-shadow(none);
+    box-shadow: none;
     border: 1px solid;
     background-color: transparent;
     text-shadow: 1px 1px 0 rgba(0, 0, 0, .6);
-    @include box-shadow(inset 0px 0px 2px rgba(0, 0, 0, .6));
+    box-shadow: inset 0px 0px 2px rgba(0, 0, 0, .6);
 
     &.hover,
     &:hover {
