--- a/sass/layout/typography.scss
+++ b/sass/layout/typography.scss
@@ -289,10 +289,10 @@ kbd {
   color: #fff;
   font-size: 90%;
   padding: 2px 4px;
-  @include border-radius(3px);
+  border-radius: 3px;
   background-color: #333;
   font-family: $font-family-monospace;
-  @include box-shadow(inset 0 -1px 0 rgba(0, 0, 0, .25));
+  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .25);
 
   kbd {
     padding: 0;
